    thread.
  * New function starpu_get_pu_os_index() to convert logical index of a PU to
    its OS index.
  * New function starpu_get_hwloc_topology() to get the hwloc topology used by
    StarPU.
  * Add a task prefetch level, to improve retaining data in accelerators so we
    can make prefetch more aggressive.
  * Add starpu_data_dup_ro().

Small changes:
  * Add a synthetic energy efficiency testcase.

StarPU 1.3.5 (git revision xxx)
====================================================================

Small changes:
  * Move MPI cache functions into the public API

StarPU 1.3.4 (git revision c37a5d024cd997596da41f765557c58099baf896)
====================================================================

Small features:
  * New environment variables STARPU_BUS_STATS_FILE and
    STARPU_WORKER_STATS_FILE to specify files in which to display
    statistics about data transfers and workers.
  * Add starpu_bcsr_filter_vertical_block filtering function.
  * Add starpu_interface_copy2d, 3d, and 4d to easily request data copies from
    data interfaces.
  * Move optimized cuda 2d copy from interfaces to new
    starpu_cuda_copy2d_async_sync and starpu_cuda_copy3d_async_sync, and use
    them from starpu_interface_copy2d and 3d.
  * New function starpu_task_watchdog_set_hook to specify a function
    to be called when the watchdog is raised
  * Add STARPU_LIMIT_CPU_NUMA_MEM environment variable.
  * Add STARPU_WORKERS_GETBIND environment variable.
  * Add STARPU_SCHED_SIMPLE_DECIDE_ALWAYS modular scheduler flag.
  * And STARPU_LIMIT_BANDWIDTH environment variable.
  * Add field starpu_conf::precedence_over_environment_variables to ignore
    environment variables when parameters are set directly in starpu_conf
  * Add starpu_data_get_coordinates_array
  * MPI: new functions starpu_mpi_interface_datatype_register() and
    starpu_mpi_interface_datatype_unregister() which take a enum
    starpu_data_interface_id instead of a starpu_data_handle_t